Uncomment offline version's input code

--- a/documentation/input.html
+++ b/documentation/input.html
@@ -20,13 +20,13 @@
 </p>
 
 <pre class="example" style="margin-left:40px">
-  1.0,,
-  0.2,1.0,
+  1.0
+  0.2,1.0
   0.3,0.4,1.0
 </pre>
 
 <p>
-  Data from the upper half of the correlation matrix is optional, but the commas which would have separated the absent data are not. In SPSS, you can produce a plain correlation matrix such as this using the following syntax:
+  Data from the upper half of the correlation matrix is optional. In SPSS, you can produce a plain correlation matrix using the following syntax:
 </p>
 
 <pre class="example" style="margin-left:40px">
