--- a/documentation/input.html
+++ b/documentation/input.html
@@ -1,6 +1,6 @@
 <br>
 <p>
-  Input consists of a hypothesis matrix and one or more raw or correlation data files. Input files should be in headerless, comma-separated (.csv) format. The "CSV Generator" linked in the header bar is a web application for creating properly-formatted input for the one or two group case.
+  Input consists of a hypothesis matrix and a raw or correlation data file. Input files should be in headerless, comma-separated (.csv) format. The "CSV Generator" linked in the header bar is a web application for creating properly-formatted input.
 </p>
 
 <p>
@@ -44,18 +44,20 @@
 </p>
 
 <pre class="example" style="margin-left:40px">
-  1,2,1,1,0
-  1,3,1,1,0
-  1,3,2,0,0.2
-  1,4,1,2,0
+  2,1,1,0
+  3,1,1,0
+  3,2,0,0.2
+  4,1,2,0
 </pre>
 
 <p>
-  Each row of the hypothesis matrix is of the form: group, row, column, parameter tag, fixed value. The first three columns specify a correlation, conventionally from the lower half of the correlation matrix, and the fourth and fifth make an assertion about the value of that correlation. Correlations with the same positive integer in the parameter tag column are hypothesised to be equal, and correlations with a parameter tag of 0 are hypothesised to be equal to the value of their fixed value column. Correlations with different parameter tags are not hypothesised to be unequal. If a parameter tag is assigned to a single correlation then the output will include an estimate of that correlation, but the p value for the test will be the same as if it hadn't been included.
+  (You may also use a WBCORR (linked in the header bar) style hypothesis file with a group column, which would merely add a column of 1s at the beginning of the matrix.)
+
+  Each row of the hypothesis matrix is of the form: row, column, parameter tag, fixed value. The first two columns specify a correlation, conventionally from the lower half of the correlation matrix, and the third and fourth make an assertion about the value of that correlation. Correlations with the same positive integer in the parameter tag column are hypothesised to be equal, and correlations with a parameter tag of 0 are hypothesised to be equal to the value of their fixed value column. Correlations with different parameter tags are not hypothesised to be unequal. If a parameter tag is assigned to a single correlation then the output will include an estimate of that correlation, but the p value for the test will be the same as if it hadn't been included.
 </p>
 
 <p>
-  Take the first row of the sample hypothesis matrix. The first three columns specify the correlation in correlation matrix 1 at row 2 of column 1 (&rho;<sub>21</sub> or &rho;<sub>1<sub>21</sub></sub>). Put differently, they pick out the correlation in group 1 between variable 2 and variable 1. This correlation has a parameter tag of 1, so it is hypothesised to be equal to the correlation picked out by the second row, which also has a parameter tag of 1. On the other hand, since its parameter tag is 0, the correlation in the third row is hypothesised to be equal to 0.2. Finally, the correlation in the fourth row is the only correlation with a parameter tag of 2, so it does not figure into the hypothesis at all. Effectively, the hypothesis says: (&rho;<sub>21</sub> = &rho;<sub>31</sub>) &amp; (&rho;<sub>32</sub> = 0.2).
+  Take the first row of the sample hypothesis matrix. The first two columns specify the correlation at row 2 of column 1 (&rho;<sub>21</sub>). Put differently, they pick out the correlation between variable 2 and variable 1. This correlation has a parameter tag of 1, so it is hypothesised to be equal to the correlation picked out by the second row, which also has a parameter tag of 1. On the other hand, the correlation in the third row, since its parameter tag is 0, is hypothesised to be equal to 0.2. Finally, the correlation in the fourth row is the only correlation with a parameter tag of 2, so it does not figure into the hypothesis at all. Effectively, the hypothesis says: (&rho;<sub>21</sub> = &rho;<sub>31</sub>) &amp; (&rho;<sub>32</sub> = 0.2).
 </p>
 
 <p>
