--- a/documentation/input.html
+++ b/documentation/input.html
@@ -51,8 +51,12 @@
 </pre>
 
 <p>
-  (You may also use a WBCORR (linked in the header bar) style hypothesis file with a group column, which would merely add a column of 1s at the beginning of the matrix.)
+  You can also use a WBCORR (see the header bar) style hypothesis file with a group column, which would merely add a column of 1s to the beginning of this matrix. This is what that hypothesis would look like in the CSV Generator, which is in WBCORR format:
+</p>
 
+<img src="./hypothesis.png", style="margin-bottom: 10px; margin-top: 10px; margin-left:40px">
+
+<p>
   Each row of the hypothesis matrix is of the form: row, column, parameter tag, fixed value. The first two columns specify a correlation, conventionally from the lower half of the correlation matrix, and the third and fourth make an assertion about the value of that correlation. Correlations with the same positive integer in the parameter tag column are hypothesised to be equal, and correlations with a parameter tag of 0 are hypothesised to be equal to the value of their fixed value column. Correlations with different parameter tags are not hypothesised to be unequal. If a parameter tag is assigned to a single correlation then the output will include an estimate of that correlation, but the p value for the test will be the same as if it hadn't been included.
 </p>
 
