Fix raw data calculation

--- a/documentation/output.html
+++ b/documentation/output.html
@@ -43,7 +43,7 @@ Input Hypothesis Matrix</td></tr>
 <table class='gmisc_table' style='border-collapse: collapse; margin-top: 1em; margin-bottom: 1em; margin-left: 2em; ' >
 <thead>
 <tr><td colspan='7' style='text-align: left;'>
-Input Correlation Matrix #1 (N=25)</td></tr>
+Input Correlation Matrix (N=25)</td></tr>
 <tr>
 <th style='border-bottom: 1px solid grey; border-top: 2px solid grey;'> </th>
 <th style='border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: right;'><b>X<sub>1</sub></b></th>
@@ -117,7 +117,7 @@ And the matrix of OLS (ordinary least squares) estimates:
 <table class='gmisc_table' style='border-collapse: collapse; margin-top: 1em; margin-bottom: 1em; margin-left: 2em; ' >
 <thead>
 <tr><td colspan='7' style='text-align: left;'>
-OLS Estimates Matrix #1 (N=25)</td></tr>
+OLS Estimates Matrix (N=25)</td></tr>
 <tr>
 <th style='border-bottom: 1px solid grey; border-top: 2px solid grey;'> </th>
 <th style='border-bottom: 1px solid grey; border-top: 2px solid grey; text-align: right;'><b>X<sub>1</sub></b></th>
@@ -204,14 +204,14 @@ TSGLS Parameter Estimates</td></tr>
 <tbody>
 <tr>
 <td style='border-bottom: 2px solid grey; text-align: center;'>1</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>0.064</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>0.124</td>
-<td style='border-bottom: 2px solid grey; text-align: center;'>[-0.339, 0.448]</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>0.067</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>0.015</td>
+<td style='border-bottom: 2px solid grey; text-align: center;'>[-0.337, 0.45]</td>
 </tr>
 </tbody>
 </table>
 
-<p>The TSGLS estimate is parameter 1 = &rho;<sub>21</sub> = &rho;<sub>31</sub> = &rho;<sub>32</sub> = 0.064. As with the OLS matrix, this is a null-consistent estimate. This table also contains 95% confidence intervals on point estimates, using a strict Bonferroni. Confidence intevals are calculated using the Fisher transform method.</p>
+<p>The TSGLS estimate is parameter 1 = &rho;<sub>21</sub> = &rho;<sub>31</sub> = &rho;<sub>32</sub> = 0.067. As with the OLS matrix, this is a null-consistent estimate. This table also contains 95% confidence intervals on point estimates, using a strict Bonferroni. Confidence intevals are calculated using the Fisher transform method.</p>
 
 <p>Next we have the significance of the hypothesis test:</p>
 
