Use scientific notation for p values below 0.001 and add about page

--- a/documentation/input.html
+++ b/documentation/input.html
@@ -1,6 +1,6 @@
 <br>
 <p>
-  Input consists of a hypothesis matrix and a raw or correlation data matrix. Input files should be in headerless, comma-separated (.csv) format. The "CSV Generator" in the header bar is a web application for creating properly-formatted correlation matrices, as well as one to two group hypothesis matrices.
+  Input consists of a hypothesis matrix and a raw or correlation data matrix. Input files should be in headerless, comma-separated (.csv) format. The "CSV Generator" in the header bar is a web application for creating properly-formatted correlation and hypothesis matrices.
 </p>
 
 <p>
