--- a/documentation/about.html
+++ b/documentation/about.html
@@ -1,11 +1,23 @@
 <br>
 
   <p>
-MML-Multicorr is an extension and web application implementation of Multicorr, a correlation pattern hypothesis test program developed by Steiger (1979). MML-Multicorr may be cited in APA style as follows:
+   MML-Multicorr is a application implementation of procedures to addres the TYPES of research questions addressed with Multicorr -- a correlation pattern hypothesis test program developed by Steiger (1979). 
+  </p>  
+  
+  <p>
+   This About page is in development to clarify that except in specific cases, in contrast with Steiger's Multicorr, MML-Multicorr procedures are based on the GLS, 2SGLS, ADF, 2SADF theory as implemented in MML-WBCORR, and has several additional functionalities from the program developed by Steiger (WBCORR, 1997). These additional functionality and should be described here.
+  </p>
+  
+  <p>
+   Please also refer to http://www.sfu.ca/psychology/research/mml/resources.html
+  </p>
+  
+  <p>
+   MML-Multicorr may be cited in APA style as follows:
   </p>
 
   <p style="margin-left: 2em">
-Fouladi, R. T, &amp; Serafini, P. E. (2018). MML-Multicorr. Retrieved from http://members.psyc.sfu.ca/labs/mml.
+   Fouladi, R. T, &amp; Serafini, P. E. (2018). MML-Multicorr. Retrieved from http://members.psyc.sfu.ca/labs/mml.
   </p>
 
   <p>
